--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -1,1 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:300,400,700');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Lato', sans-serif;
+}
