--- a/src/pages/Home/components/SideMenu/styles.scss
+++ b/src/pages/Home/components/SideMenu/styles.scss
@@ -10,9 +10,11 @@ $menu_element_selected_color: #3F3939;
 .element {
   color: $menu_element_primary_color;
   padding: 10px 30px;
+  text-transform: uppercase;
 }
 
 .element:hover {
+  cursor: pointer;
   color: $menu_element_primary_color;
   background-color: $menu_element_selected_color;
 }
@@ -49,7 +51,7 @@ $menu_element_selected_color: #3F3939;
 }
 
 .side_menu_elements {
-  max-height: 100%;
+  max-height: 86%;
   overflow-x: scroll;
 }
 
