--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -6,3 +6,22 @@
   box-sizing: border-box;
   font-family: 'Lato', sans-serif;
 }
+
+.column {
+  float: left;
+  width: 50%;
+  padding: 0 20px;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+@media only screen and (max-width: 1200px) {
+  .column {
+    width: 100%;
+  }
+}
