--- a/src/pages/Home/components/SideMenu/styles.scss
+++ b/src/pages/Home/components/SideMenu/styles.scss
@@ -7,6 +7,26 @@ $menu_element_primary_color: #ffffff;
 $menu_element_secondary_color: #797979;
 $menu_element_selected_color: #3F3939;
 
+@mixin can-display($width) {
+  @if $width == 0 {
+    display: none;
+  }
+  else {
+    display: initial;
+  }
+}
+
+.menu__icon {
+  display: none;
+}
+
+.bar {
+  width: 35px;
+  height: 5px;
+  background-color: #212121;
+  margin: 6px 0;
+}
+
 .element {
   color: $menu_element_primary_color;
   padding: 10px 30px;
@@ -42,12 +62,14 @@ $menu_element_selected_color: #3F3939;
 .side_menu {
   font-weight: 300;
   font-size: 14px;
+  width: 359px;
   height: 100%;
   position: fixed;
   z-index: 1;
   top: 0;
   left: 0;
   background-color: $menu_container_color;
+  transition: width .5s;
 }
 
 .side_menu_elements {
@@ -64,6 +86,7 @@ $menu_element_selected_color: #3F3939;
 }
 
 .side_menu__app_logo a {
+  text-align: center;
   padding: 25px 39px;
   font-size: 36px;
   text-transform: uppercase;
@@ -75,4 +98,33 @@ $menu_element_selected_color: #3F3939;
 .side_menu__app_logo a img {
   vertical-align: middle;
   padding-right: 30px;
+}
+
+.menu__icon{
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 992px) {
+  .side_menu {
+    width: 250px;
+  }
+
+  .side_menu__app_logo a img {
+    padding: 5px 0;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .side_menu {
+    width: 0;
+  }
+
+  .menu__icon {
+    display: block;
+  }
+
+  .side_menu_container {
+    padding-top: 30px;
+    padding-left: 60px;
+  }
 }
