--- a/src/pages/style.scss
+++ b/src/pages/style.scss
@@ -20,8 +20,20 @@
   clear: both;
 }
 
+.hide {
+  display: none;
+}
+
 @media only screen and (max-width: 1200px) {
   .column {
     width: 100%;
+    margin: 5px 0;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .column {
+    width: 100%;
+    padding: 0;
   }
 }
